# multi-model-ai-agents

./: multi-model-ai-agents.code-workspace
autogen/group-chat/: README.md  requirements.txt
autogen/group-chat/api/: team-config.json
autogen/group-chat/src/: main.py
autogen/hello-world/: requirements.txt
autogen/hello-world/src/: main.py
autogen/ui/: alembic.ini  autogen.db
autogen/ui/alembic/versions/: 521dcee42421_initial_schema.py
crewai/hello-world/: README.md
crewai/hello_world/: .gitignore  README.md  pyproject.toml
crewai/hello_world/src/hello_world/: main.py
crewai/url_insight_api/: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
crewai/url_insight_api/app/: main.py
crewai/url_insight_api/app/api/v1/endpoints/: analyzer.py
crewai/url_insight_api/app/core/: config.py
crewai/url_insight_api/app/services/: services.py
crewai/url_insight_api/config/: log_config.yaml
crewai/url_insight_api/src/api/: services.py  url_analyzer.py
crewai/url_insight_api/src/url_insight_api/: crew.py  main.py  models.py  services.py  url_analyzer.py
crewai/url_insight_api/tests/: test_client.py
